CDP-1620 FDA: SonarQube metric improvements: fix SonarQube code smells